--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
             <h1>
                 Rescued Soul
             </h1>
+            <img src="https://raw.githubusercontent.com/annettecella/vschoolproject/master/annette-pic-1.jpg"> 
+            
         </body>
     </html>
